[package]
name = "v1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.147"
askama = "0.11.1"
mysql = "*"
chrono = "0.4"
rand = "0.8.5"
futures = "0.3.25"
aes= "0.8.1"
rust-argon2 = "1.0"
aes-gcm = "0.10.1"
generic-array = "0.14.6"
actix-files = "0.6"
actix-session = { version = "0.7", features = ["cookie-session"] }
env_logger = "0.9"
log = "0.4"
async-stream = "0.3"